# lib-ml

./: README.md  pyproject.toml  setup.py
.github/workflows/: prerelease.yml  release.yml
src/lib_ml/: preprocess.py
